--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,63 @@
-.flex-div {
-  display: flex;
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
+body {
+  background-color: #516dff;
+  color: #fff;
+  font-family: "Press Start 2P", cursive;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0 auto;
+  text-align: center;
+  align-items: center;
 }
 
-p {
-  margin: 5px auto;
+a {
+  color: #fff;
 }
 
-img {
-  margin: 5px auto;
-  /* border: 2px solid red; */
+h1 {
+  line-height: 1.4;
 }
 
-button {
-  margin: 5px;
-  width: 75px;
-  height: 125px;
+.screen {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.screen.up {
+  margin-top: -100vh;
+}
+
+.btn {
+  border: 0;
+  background-color: #fff;
+  color: #516dff;
+  padding: 15px 20px;
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.insects-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.choose-insect-btn img {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
 }
