--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ a {
 
 h1 {
   line-height: 1.4;
+  margin: 0;
+}
+
+p {
+  margin: 0 0 5px;
 }
 
 .screen {
@@ -29,7 +34,7 @@ h1 {
 }
 
 .screen.up {
-  margin-top: -100vh;
+  margin-top: -200vh;
 }
 
 .btn {
@@ -54,10 +59,33 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding: 0;
+  margin: 5px 0;
+}
+
+.insects-list li {
+  margin: 10px;
+}
+
+.choose-insect-btn {
+  background-color: #a3b2ff;
+  border: 1px solid #1c2a39;
+  cursor: pointer;
+  font-family: inherit;
+}
+
+.choose-insect-btn:hover {
+  background-color: #fff;
+  color: #516dff;
+}
+
+.choose-insect-btn:active {
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .choose-insect-btn img {
-  width: 100px;
+  width: 80px;
   height: 100px;
-  object-fit: contain;
+  padding: 5px 0;
+  stroke: 2px greenyellow;
 }
