--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ p {
   justify-content: center;
   height: 100vh;
   width: 100vw;
+  transition: margin 0.5s ease-out;
 }
 
 .screen.up {
@@ -137,7 +138,7 @@ p {
   height: 150px;
   position: absolute;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-out;
 }
 
 .insect.caught {
